--- a/app/globals.css
+++ b/app/globals.css
@@ -2,26 +2,42 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+@media (max-width: 1703px) {
+  .main {
+      grid-template-columns: repeat(5, 1fr);
   }
 }
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+@media (max-width: 1425px) {
+  .main {
+      grid-template-columns: repeat(4, 1fr);
+  }
 }
+@media (max-width: 1033px) {
+  .main {
+      grid-template-columns: repeat(3, 1fr);
+  }
+}
+@media (max-width: 861px) {
+  .main {
+      grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (max-width: 500px) {
+  .main {
+      grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (max-width: 280px) {
+  .main {
+      grid-template-columns: repeat(1, 1fr);
+  }
+}
+.bg-navbar {
+  background-color: rgb(64, 61, 57);
+}
+
+.text-golden {
+  color: #FFD700; 
+}
+
+
