--- a/app/globals.css
+++ b/app/globals.css
@@ -39,9 +39,10 @@
 .text-golden {
   color: #FFD700; 
 }
+/* 
 
-
-/* :root {
+:root {
+  
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
@@ -64,3 +65,9 @@ body {
     )
     rgb(var(--background-start-rgb));
 } */
+
+body {
+  background-image: url('/assets/harryyy.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+}
